[package]
name = "ens_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"] }
