[package]
name = "ens_client"
author = "RyouonRitsu <zhouhongxi@bytedance.com>"
version = "0.1.0"
edition = "2021"
about = "A client program for an event notification server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
